mux-compiler/tests/snapshots/parser_integration__legacy_ast_test_recursive_module.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: Import {
                module_path: "recursivemod",
                spec: Module {
                    alias: Some(
                        "recursivemod",
                    ),
                },
            },
            span: Span,
        },
    ),
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "fib(10): ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: FieldAccess {
                                                            expr: ExpressionNode {
                                                                kind: Call {
                                                                    func: ExpressionNode {
                                                                        kind: FieldAccess {
                                                                            expr: ExpressionNode {
                                                                                kind: Identifier(
                                                                                    "recursivemod",
                                                                                ),
                                                                                span: Span,
                                                                            },
                                                                            field: "fibonacci",
                                                                        },
                                                                        span: Span,
                                                                    },
                                                                    args: [
                                                                        ExpressionNode {
                                                                            kind: Literal(
                                                                                Integer(
                                                                                    10,
                                                                                ),
                                                                            ),
                                                                            span: Span,
                                                                        },
                                                                    ],
                                                                },
                                                                span: Span,
                                                            },
                                                            field: "to_string",
                                                        },
                                                        span: Span,
                                                    },
                                                    args: [],
                                                },
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "10 even? ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: FieldAccess {
                                                            expr: ExpressionNode {
                                                                kind: Call {
                                                                    func: ExpressionNode {
                                                                        kind: FieldAccess {
                                                                            expr: ExpressionNode {
                                                                                kind: Identifier(
                                                                                    "recursivemod",
                                                                                ),
                                                                                span: Span,
                                                                            },
                                                                            field: "is_even",
                                                                        },
                                                                        span: Span,
                                                                    },
                                                                    args: [
                                                                        ExpressionNode {
                                                                            kind: Literal(
                                                                                Integer(
                                                                                    10,
                                                                                ),
                                                                            ),
                                                                            span: Span,
                                                                        },
                                                                    ],
                                                                },
                                                                span: Span,
                                                            },
                                                            field: "to_string",
                                                        },
                                                        span: Span,
                                                    },
                                                    args: [],
                                                },
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "7 even? ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: FieldAccess {
                                                            expr: ExpressionNode {
                                                                kind: Call {
                                                                    func: ExpressionNode {
                                                                        kind: FieldAccess {
                                                                            expr: ExpressionNode {
                                                                                kind: Identifier(
                                                                                    "recursivemod",
                                                                                ),
                                                                                span: Span,
                                                                            },
                                                                            field: "is_even",
                                                                        },
                                                                        span: Span,
                                                                    },
                                                                    args: [
                                                                        ExpressionNode {
                                                                            kind: Literal(
                                                                                Integer(
                                                                                    7,
                                                                                ),
                                                                            ),
                                                                            span: Span,
                                                                        },
                                                                    ],
                                                                },
                                                                span: Span,
                                                            },
                                                            field: "to_string",
                                                        },
                                                        span: Span,
                                                    },
                                                    args: [],
                                                },
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
